--- a/FUNSISI/funsisi/templates/login.html
+++ b/FUNSISI/funsisi/templates/login.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login-styles.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login-styles.css' %}">
     <title>Login Page</title>
 </head>
 <body>
