--- a/FUNSISI/funsisi/templates/login.html
+++ b/FUNSISI/funsisi/templates/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="video-container">
         <video autoplay loop muted>
-            <source src="video.mp4" type="video/mp4">
+            <source src="{% static 'assets/video.mp4' %}" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="login-container">
