--- a/FUNSISI/funsisi/templates/index.html
+++ b/FUNSISI/funsisi/templates/index.html
@@ -18,7 +18,7 @@
                     <li>About Us</li>
                     <li>Work</li>
                     <li>Info</li>
-                    <a href="login.html"><li>Get Started</li></a>
+                    <li><a href="{% url 'register' %}">Get Started</a></li>
                 </ul>
             </div>
         </header>
