--- a/FUNSISI/funsisi/templates/login.html
+++ b/FUNSISI/funsisi/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'css/login-styles.css' %}">
-    <title>Login Page</title>
+    <title>Funsisi | Login</title>
 </head>
 <body>
     <div class="video-container">
