--- a/FUNSISI/funsisi/templates/login.html
+++ b/FUNSISI/funsisi/templates/login.html
@@ -4,32 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/login-styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login-style.css' %}">
     <title>Funsisi | Login</title>
 </head>
 <body>
-    <div class="video-container">
-        <video autoplay loop muted>
-            <source src="{% static 'assets/video.mp4' %}" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <div class="login-container">
-            <div class="login-box">
-                <h2>Login</h2>
-                <form action="#" method="post">
-                    <div class="input-group">
-                        <label for="username">Username:</label>
-                        <input type="text" id="username" name="username" required>
-                    </div>
-                    <div class="input-group">
-                        <label for="password">Password:</label>
-                        <input type="password" id="password" name="password" required>
-                    </div>
-                    <button class="btn"> Login
-                    </button>
-                </form>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+    <!--
+
+        <div class="video-container">
+            <video autoplay loop muted>
+                <source src="{% static 'assets/video.mp4' %}" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+    -->
+        <div class="form">
+            <form action="" method="post">
+              {% csrf_token %}
+              <label for="fname">Username</label>
+              <input type="text" placeholder="Enter your username" name="uname"><br>
+        
+              <label for="fname">Last name</label>
+              <input type="password" placeholder="Enter your password" name="pass"><br>
+              <button type="submit">Submit</button>
+            </form>
+          </div>
+          <body>
+            <!--[if lt IE 7]>
+              <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+            <![endif]-->
+            
+            <script src="" async defer></script>
+          </body>
+        </html>
