--- a/FUNSISI/funsisi/static/css/login-styles.css
+++ b/FUNSISI/funsisi/static/css/login-styles.css
@@ -1,115 +1,81 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
+    overflow: hidden; 
 }
 
 .video-container {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
 video {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     object-fit: cover;
 }
 
-.login-container {
+.form {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: #fff;
+    color: #ffffff;
 }
 
-.login-box {
+form {
+    padding: 20px;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 8px;
-    padding: 30px;
-    width: 300px;
-    border-radius: 38px;
-            
-}
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
-h2 {
-    color: #fff;
-}
-
-.input-group {
-    margin-bottom: 20px;
-    text-align: left;
+             
 }
 
 label {
     display: block;
-    margin-bottom: 5px;
-    color: #fff;
+    margin-bottom: 10px;
+    color: #000000;
+    text-align: left;
 }
 
 input {
     width: 90%;
-    padding: 15px;
+    padding: 10px;
+    margin-bottom: 15px;
     border: 1px solid #ddd;
     border-radius: 4px;
     background-color: transparent;
-    color: #fff;
+    color: #000000;
 }
 
-input:focus {
-    border-color: #ffffff;
-    outline: none;
-}
-.btn {
-    position: relative;
-    font-size: 15px;
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1em 2.5em;
-    display: inline-block;
-    border-radius: 6em;
-    transition: all .2s;
+button {
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 10px 20px;
+    align-items: left;
     border: none;
-    font-family: inherit;
-    font-weight: 500;
-    color: black;
-    background-color: white;
-   }
-   
-   .btn:hover {
-    transform: translateY(-3px);
+    border-radius: 4px;
+    cursor: pointer;
+    border-radius: 99px;
+background: linear-gradient(145deg, #4566e9, #4267df);
+box-shadow:  21px 21px 42px #82848b,
+             -21px -21px 42px #ffffff;
+}
+button:hover{
+    transform: translateY(-4px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-   }
-   
-   .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-   }
-   
-   .btn::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
-   }
-   
-   .btn::after {
-    background-color: #fff;
-   }
-   
-   .btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-   }
+}
 
 @media screen and (max-width: 600px) {
-    .login-box {
-        width: 80%;
+    /* Add specific styles for smaller screens if needed */
+    form {
+        padding: 10px;
     }
 }
