--- a/FUNSISI/funsisi/templates/login.html
+++ b/FUNSISI/funsisi/templates/login.html
@@ -4,18 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/login-style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login-styles.css' %}">
     <title>Funsisi | Login</title>
 </head>
 <body>
-    <!--
-
         <div class="video-container">
             <video autoplay loop muted>
                 <source src="{% static 'assets/video.mp4' %}" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-    -->
         <div class="form">
             <form action="" method="post">
               {% csrf_token %}
@@ -27,11 +24,6 @@
               <button type="submit">Submit</button>
             </form>
           </div>
-          <body>
-            <!--[if lt IE 7]>
-              <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-            <![endif]-->
-            
-            <script src="" async defer></script>
-          </body>
-        </html>
+        </div>
+</body>
+</html>
