--- a/FUNSISI/funsisi/templates/base.html
+++ b/FUNSISI/funsisi/templates/base.html
@@ -9,6 +9,8 @@
     <title>{% block title %}FunSisi{% endblock %}</title>
     <!-- Add your CSS styles or links to external stylesheets here -->
     <link rel="stylesheet" href="{% static '/css/styles.css' %}">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </head>
 <body>
 
@@ -30,8 +32,5 @@
 <div class="content">
     {% block content %}{% endblock %}
 </div>
-
-<!-- Add your JavaScript scripts or links to external scripts here -->
-
 </body>
 </html>
